<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_content">&lt;p&gt;%1$s&lt;br/&gt; &lt;a href=%2$s&gt;%3$s&lt;/a&gt;&lt;/p&gt;&lt;br/&gt;&lt;br/&gt; &lt;a href=%4$s&gt;%5$s&lt;/a&gt;&lt;br/&gt;&lt;br/&gt; &lt;a href=%6$s&gt;%7$s&lt;/a&gt;&lt;br/&gt;&lt;br/&gt; &lt;a href=%8$s&gt;%9$s&lt;/a&gt;&lt;br/&gt;&lt;br/&gt; &lt;a href=%10$s&gt;%11$s&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;</string>
    <string name="about_content_body">%1$s is a fast and lightweight browser produced by %2$s. Our mission is to foster a healthy, open internet.</string>
    <string name="about_link_learn_more">Learn more</string>
    <string name="about_link_life_feed">Learn more about %1$s</string>
    <string name="about_link_privacy">Privacy Notice</string>
    <string name="about_link_support">Support</string>
    <string name="about_link_your_rights">Your Rights / Licenses</string>
    <string name="accessibility_announcement_loading">Loading</string>
    <string name="accessibility_announcement_loading_finished">Website loaded</string>
    <string name="accessibility_dismiss_find_in_page">Dismiss find in page</string>
    <string name="accessibility_find_in_page_result">%1$d out of %2$d</string>
    <string name="accessibility_find_next_result">Find next result</string>
    <string name="accessibility_find_previous_result">Find previous result</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_ok">OK</string>
    <string name="app_name">Firefox Lite</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bookmark_edit_location">Location</string>
    <string name="bookmark_edit_name">Name</string>
    <string name="bookmark_edit_save">SAVE</string>
    <string name="bookmark_edit_success">Bookmark updated</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_saved_edit">EDIT</string>
    <string name="bookmarks_empty_view_msg">No bookmarks</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browsing_history_clear_btn">CLEAR BROWSING HISTORY</string>
    <string name="browsing_history_date_today">Today</string>
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_empty_view_msg">No browsing history</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="btn_vpn">The 7-day free VPN service is ready for you. Install now to browse more privately and securely.</string>
    <string name="cannot_delete_the_file">Cannot delete the file.</string>
    <string name="cannot_find_the_file">Cannot find the file</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="content_description_back">Navigate back</string>
    <string name="content_description_blocking_switch">Block trackers</string>
    <string name="content_description_clear_input">Clear input</string>
    <string name="content_description_customtab_exit">Return to previous app</string>
    <string name="content_description_dismiss_input">Dismiss</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_lock">Secure connection</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_stop">Stop loading website</string>
    <string name="contextmenu_image_copy">Copy image address</string>
    <string name="contextmenu_image_save">Save image</string>
    <string name="contextmenu_image_share">Share image</string>
    <string name="contextmenu_link_copy">Copy link address</string>
    <string name="contextmenu_link_share">Share link</string>
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <string name="delete_file">Delete file</string>
    <string name="download_cancel">Download canceled</string>
    <string name="download_completed">%1$s downloaded</string>
    <string name="download_deleted">%1$s was deleted</string>
    <string name="download_file_not_supported">Download protocol not supported</string>
    <string name="download_started">Downloading…</string>
    <string name="edit_bookmark">Edit</string>
    <string name="error_connect_message">@string/error_connectionfailure_message</string>
    <string name="error_connect_title">@string/error_connectionfailure_title</string>
    <string name="error_connection_failure_message">&lt;p&gt;Though the site seems valid, the browser was unable to establish a connection.&lt;/p&gt; &lt;ul&gt; &lt;li&gt;Could the site be temporarily unavailable? Try again later.&lt;/li&gt; &lt;li&gt;Are you unable to browse other sites? Check the computer\'s network connection.&lt;/li&gt; &lt;li&gt;Is your computer or network protected by a firewall or proxy? Incorrect settings can interfere with Web browsing.&lt;/li&gt; &lt;/ul&gt;</string>
    <string name="error_connection_failure_title">Failed to Connect</string>
    <string name="error_connectionfailure_message">&lt;ul&gt; &lt;li&gt;The site could be temporarily unavailable or too busy. Try again in a few moments.&lt;/li&gt; &lt;li&gt;If you are unable to load any pages, check your mobile device’s data or Wi-Fi connection.&lt;/li&gt; &lt;/ul&gt;</string>
    <string name="error_page_button">TRY AGAIN</string>
    <string name="error_page_recover_a">Make sure you are connected to the internet</string>
    <string name="find_in_page_input">Find in page</string>
    <string name="http_auth_dialog_password">Password</string>
    <string name="http_auth_dialog_title">Authentication required</string>
    <string name="http_auth_dialog_user_name">Username</string>
    <string name="label_menu_block_image">Block images</string>
    <string name="label_menu_bookmark">Bookmarks</string>
    <string name="label_menu_clear_cache">Clear cache</string>
    <string name="label_menu_download">Downloads</string>
    <string name="label_menu_exit">Exit</string>
    <string name="label_menu_find_in_page">Find in page</string>
    <string name="label_menu_history">History</string>
    <string name="label_menu_latest_top_trending_news">Latest &amp; Top Trending News</string>
    <string name="label_menu_my_shots">My shots</string>
    <string name="label_menu_night_mode">Night mode</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_menu_turbo_mode">Turbo mode</string>
    <string name="menu_about">About</string>
    <string name="menu_give_feedback">Give feedback</string>
    <string name="menu_share_with_friends">Share with friends</string>
    <string name="my_shot_on_boarding_category_message">To improve your product experience, we collect information about your screenshots’ categories.</string>
    <string name="my_shot_on_boarding_message">View your screenshots here!</string>
    <string name="news_update_btn">New update</string>
    <string name="pref_key_about">pref_about</string>
    <string name="pref_key_category_development">pref_key_category_development</string>
    <string name="pref_key_default_browser">pref_default_browser</string>
    <string name="pref_key_give_feedback">pref_give_feedback</string>
    <string name="pref_key_locale">pref_locale</string>
    <string name="pref_key_night_mode_brightness">pref_night_mode_brightness</string>
    <string name="pref_key_search_engine">pref_search_engine</string>
    <string name="pref_key_share_with_friends">pref_share_with_friends</string>
    <string name="pref_key_storage_clear_browsing_data">pref_clear_browsing_data</string>
    <string name="pref_key_storage_save_downloads_to">pref_save_downloads_to</string>
    <string name="pref_key_turbo_mode">pref_privacy_turbo_mode</string>
    <string name="pref_s_news">pref_s_news</string>
    <string name="preference_default_browser">Make default browser</string>
    <string name="preference_dialog_title_news_source">News source</string>
    <string name="preference_language">Language</string>
    <string name="preference_learn_more">Learn more</string>
    <string name="preference_mozilla_telemetry">Send usage data</string>
    <string name="preference_night_mode_brightness">Night mode brightness</string>
    <string name="preference_privacy_storage_clear_browsing_data">Clear browsing data</string>
    <string name="preference_privacy_storage_save_downloads_to">Save downloads to</string>
    <string name="preference_search_engine_default">Default search engine</string>
    <string name="preference_turbo_mode">Turbo mode</string>
    <string name="private_tab">Private tab</string>
    <string name="setting_dialog_cancel">Cancel</string>
    <string name="setting_dialog_clear_data">Clear Data</string>
</resources>