<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:key="root_preferences">
    <org.mozilla.focus.widget.LocaleListPreference android:layout="@layout/focus_preference" android:title="@string/preference_language" android:key="@string/pref_key_locale" android:defaultValue=""/>
    <org.mozilla.focus.search.SearchEnginePreference android:layout="@layout/focus_preference" android:title="@string/preference_search_engine_default" android:key="@string/pref_key_search_engine"/>
    <org.mozilla.rocket.widget.NewsSourcePreference android:layout="@layout/focus_preference" android:title="@string/preference_dialog_title_news_source" android:key="@string/pref_s_news"/>
    <org.mozilla.focus.widget.CleanBrowsingDataPreference android:entries="@array/clean_browsing_data_entries" android:layout="@layout/focus_preference" android:title="@string/preference_privacy_storage_clear_browsing_data" android:key="@string/pref_key_storage_clear_browsing_data" android:defaultValue="@array/clean_browsing_data_values" android:positiveButtonText="@string/setting_dialog_clear_data" android:negativeButtonText="@string/setting_dialog_cancel" android:entryValues="@array/clean_browsing_data_values"/>
    <org.mozilla.focus.widget.DataSavingPathPreference android:layout="@layout/focus_preference" android:title="@string/preference_privacy_storage_save_downloads_to" android:key="@string/pref_key_storage_save_downloads_to"/>
    <Preference android:layout="@layout/focus_preference" android:title="@string/preference_night_mode_brightness" android:key="@string/pref_key_night_mode_brightness"/>
    <org.mozilla.focus.widget.TurboSwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_turbo_mode" android:key="@string/pref_key_turbo_mode" android:summary="@string/preference_learn_more"/>
    <org.mozilla.focus.widget.DefaultBrowserPreference android:layout="@layout/focus_preference" android:title="@string/preference_default_browser" android:key="@string/pref_key_default_browser"/>
    <org.mozilla.focus.widget.TelemetrySwitchPreference android:persistent="false" android:layout="@layout/preference_telemetry" android:title="@string/preference_mozilla_telemetry"/>
    <Preference android:layout="@layout/focus_preference" android:title="@string/menu_give_feedback" android:key="@string/pref_key_give_feedback"/>
    <Preference android:layout="@layout/focus_preference" android:title="@string/menu_share_with_friends" android:key="@string/pref_key_share_with_friends"/>
    <org.mozilla.focus.widget.AboutPreference android:layout="@layout/focus_preference" android:title="@string/menu_about" android:key="@string/pref_key_about"/>
    <PreferenceCategory android:title="For Development" android:key="@string/pref_key_category_development">
        <SwitchPreference android:title="Private Mode" android:key="pref_key_private_mode_enabled" android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
