<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@c0426id/menu_new_tab_image" android:title="@string/contextmenu_open_image_in_new_tab"/>
    <item android:id="@c0426id/menu_new_tab" android:title="@string/contextmenu_open_in_new_tab"/>
    <item android:id="@c0426id/menu_link_share" android:title="@string/contextmenu_link_share"/>
    <item android:id="@c0426id/menu_link_copy" android:title="@string/contextmenu_link_copy"/>
    <item android:id="@c0426id/menu_image_share" android:title="@string/contextmenu_image_share"/>
    <item android:id="@c0426id/menu_image_copy" android:title="@string/contextmenu_image_copy"/>
    <item android:id="@c0426id/menu_image_save" android:title="@string/contextmenu_image_save"/>
</menu>
