<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageButton android:id="@c0426id/forward" android:background="?android:attr/selectableItemBackgroundBorderless" android:layout_width="0dp" android:layout_height="48dp" android:src="@drawable/ic_forward" android:layout_weight="1" android:contentDescription="@string/content_description_forward"/>
    <ImageButton android:id="@c0426id/refresh" android:background="?android:attr/selectableItemBackgroundBorderless" android:layout_width="0dp" android:layout_height="48dp" android:src="@drawable/ic_refresh" android:layout_weight="1" android:contentDescription="@string/content_description_reload"/>
    <ImageButton android:id="@c0426id/stop" android:background="?android:attr/selectableItemBackgroundBorderless" android:layout_width="0dp" android:layout_height="48dp" android:src="@drawable/ic_close" android:layout_weight="1" android:contentDescription="@string/content_description_stop"/>
</LinearLayout>
