<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingTop="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/paletteBlack100" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/http_auth_dialog_title"/>
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" app:hintTextAppearance="@style/HintTextAppearance">
        <EditText android:theme="@style/ColorHandleTheme" android:textSize="16sp" android:textColor="@color/paletteBlack100" android:id="@c0426id/httpAuthUsername" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/http_auth_dialog_user_name" android:inputType="textEmailAddress" android:textCursorDrawable="@null" android:backgroundTint="@color/paletteDarkBlueC100"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/HintTextAppearance">
        <EditText android:theme="@style/ColorHandleTheme" android:textSize="16sp" android:textColor="@color/paletteBlack100" android:id="@c0426id/httpAuthPassword" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/http_auth_dialog_password" android:inputType="textPassword" android:textCursorDrawable="@null" android:backgroundTint="@color/paletteDarkBlueC100"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
