<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@c0426id/find_in_page" android:background="?attr/colorFindInPageBackground" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="48dp" android:elevation="10dp">
    <EditText android:textSize="16sp" android:textColor="?attr/colorFindInPageTextColor" android:gravity="center_vertical" android:id="@c0426id/find_in_page_query_text" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/find_in_page_input" android:maxLines="1" android:lines="1" android:ems="10" android:inputType="textNoSuggestions" android:textCursorDrawable="@drawable/cursor" android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@c0426id/find_in_page_result_text" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="12sp" android:textColor="?attr/colorFindInPageTextColor" android:id="@c0426id/find_in_page_result_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@c0426id/find_in_page_prev_btn" app:layout_constraintStart_toEndOf="@c0426id/find_in_page_query_text" app:layout_constraintTop_toTopOf="0"/>
    <ImageButton android:id="@c0426id/find_in_page_prev_btn" android:src="@drawable/ic_arrowhead_up" android:contentDescription="@string/accessibility_find_previous_result" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@c0426id/find_in_page_next_btn" app:layout_constraintStart_toEndOf="@c0426id/find_in_page_result_text" app:layout_constraintTop_toTopOf="0" style="@style/FindInPageButton"/>
    <ImageButton android:id="@c0426id/find_in_page_next_btn" android:src="@drawable/ic_arrowhead_down" android:contentDescription="@string/accessibility_find_next_result" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@c0426id/find_in_page_close_btn" app:layout_constraintStart_toEndOf="@c0426id/find_in_page_prev_btn" app:layout_constraintTop_toTopOf="0" style="@style/FindInPageButton"/>
    <ImageButton android:id="@c0426id/find_in_page_close_btn" android:src="@drawable/ic_close" android:contentDescription="@string/accessibility_dismiss_find_in_page" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@c0426id/find_in_page_next_btn" app:layout_constraintTop_toTopOf="0" style="@style/FindInPageButton"/>
</android.support.constraint.ConstraintLayout>
