<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="bottom" android:id="@c0426id/content_portal_container" android:background="@drawable/background_menu" android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar android:id="@c0426id/news_progress_center" android:padding="12dp" android:layout_width="60dp" android:layout_height="60dp" android:indeterminate="true" android:layout_centerInParent="true"/>
    <TextView android:textColor="@color/paletteLightBlack100" android:id="@c0426id/news_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/label_menu_latest_top_trending_news" android:layout_marginStart="16dp" style="@style/Headline4"/>
    <Button android:id="@c0426id/news_update" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/news_update_btn" android:layout_marginEnd="16dp" style="@style/ButtonText2"/>
    <android.support.p004v7.widget.RecyclerView android:id="@c0426id/news_list" android:paddingBottom="60dp" android:visibility="gone" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="48dp"/>
    <RelativeLayout android:id="@c0426id/empty_view_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout android:layout_width="160dp" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:id="@c0426id/empty_view_image" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/internet_error" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/PanelEmptyHolderImage"/>
            <TextView android:textColor="@color/paletteDarkGreyD100" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_margin_m2" android:layout_marginBottom="40dp" android:text="@string/error_page_recover_a" app:layout_constraintBottom_toTopOf="@c0426id/news_try_again" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@c0426id/empty_view_image" style="@style/Body3"/>
            <Button android:textColor="@color/paletteDarkBlueC100" android:id="@c0426id/news_try_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/error_page_button" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/ButtonText2"/>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</RelativeLayout>
