<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:id="@c0426id/spotlight_mock_menu" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <ImageView android:id="@c0426id/my_shot_img_hand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="45dp" android:src="@drawable/pointing" android:scaleType="fitXY" android:layout_alignBottom="@c0426id/spotlight_mock_menu" android:layout_marginEnd="45dp" android:layout_alignEnd="@c0426id/spotlight_mock_menu"/>
    <TextView android:textSize="18sp" android:textColor="@color/paletteWhite100" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14dp" android:text="@string/my_shot_on_boarding_message" android:layout_above="@c0426id/my_shot_img_hand" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-medium" android:layout_marginStart="54dp" android:layout_marginEnd="54dp"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@c0426id/my_shot_category_learn_more" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@c0426id/my_shot_mock_navigation_bar" android:paddingStart="28dp" android:paddingEnd="28dp">
        <TextView android:textSize="12sp" android:textColor="@color/paletteWhite100" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/my_shot_on_boarding_category_message" android:fontFamily="sans-serif" android:textAlignment="center"/>
        <TextView android:textSize="12sp" android:textColor="#0a84ff" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="48dp" android:text="@string/preference_learn_more"/>
    </LinearLayout>
    <View android:id="@c0426id/my_shot_mock_navigation_bar" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_alignParentBottom="true"/>
</RelativeLayout>
